# swarm

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION-SUMMARY.md  PLAN-base-agents.md  README.md  design-advanced-orchestration.md  design-execution-loop.md  design-search-memory.md  design.md  execution-review.md  install-skill.sh  install.sh  integration-review.md  pyproject.toml  swarm.skill.md  test_integration.sh
docs/: memory.md  messaging.md  swarm-hud-design.md  swarm-hud-mockup.md  tier1-design.md  tier2-design.md  tier3-design.md  writing-plans.md
examples/: README.md
examples/code-review/: README.md  plan.json
examples/incident-response/: README.md  plan.json
tests/: conftest.py  test_catalog_integration.py  test_catalog_seed.py  test_cli_catalog.py  test_cli_experiment.py  test_cli_forge.py  test_cli_launch.py  test_cli_ls.py  test_cli_mcp_config.py  test_cli_plan.py  test_cli_registry.py  test_cli_run.py  test_cli_status.py  test_cli_sync.py  test_cli_update.py  test_concurrent_access.py  test_config.py  test_context_api.py  test_dirs.py  test_experiments_api.py  test_forge_api.py  test_forge_cache.py  test_forge_diff.py  test_forge_prompts.py  test_forge_ranking.py  test_frontmatter.py  test_fts.py  test_hud_events.py  test_logging.py  test_mcp_artifact_tools.py  test_mcp_context_tools.py  test_mcp_discovery_tools.py  test_mcp_executor_tools.py  test_mcp_experiment_tools.py  test_mcp_forge_annotate_from_run.py  test_mcp_forge_tools.py  test_mcp_memory_tools.py  test_mcp_message_tools.py  test_mcp_plan_amend_patch.py  test_mcp_plan_retrospective.py  (+45 more)
(+100 files in other folders)
